src/FinancialForce Accounting/objects/CustomFormLayoutRelatedListField__c.object
<CustomObject>
    <description>Stores the details of an input form related list field.</description>
    <fields>
        <fullName>CustomFormLayoutRelatedList__c</fullName>
        <label>CustomForm Layout Related List</label>
        <referenceTo>CustomFormLayoutRelatedList__c</referenceTo>
        <relationshipLabel>CustomForm Layout Related List Fields</relationshipLabel>
        <relationshipName>CustomFormLayoutRelatedListFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CustomForm Layout Related List Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFLRLF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomForm Layout Related List Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>